# Recurrence

./: .travis.yml  Phases.cabal  boring  recurrence.cabal  stack.yaml  time-phase.cabal
app/: PhaseCalendar.hs  Recur.hs
calendars/: american-federal-holidays.recur  english-public-holidays.recur
design/: Grammar  Phases  TODO
src/: DeltaSmaller.hs  Intervals.hs  PhaseCalendar.hs  PhaseSet.hs  PointSet.hs  Set.hs  StationSet.hs  StepFunction.hs  TimePhase.hs
src/Data/: Recurrence.hs  SExpression.hs  SetSearch.hs  TimePhase.hs
src/Data/Recurrence/: Atom.hs  Calendar.hs  Day.hs  Dict.hs  Eval.hs  Gregorian.hs  Interval.hs  Read.hs  SExpression.hs  Time.hs  Value.hs
src/Data/Recurrence/Calendar/: Event.hs  Item.hs  Read.hs  Show.hs
src/Data/Recurrence/SExpression/: Atom.hs  Dict.hs  Eval.hs  Value.hs
src/Data/Recurrence/Time/: Day.hs  Gregorian.hs  Recurrence.hs  Week.hs
src/Data/SExpression/: Read.hs
src/Data/SetSearch/: Base.hs  Cut.hs  DeltaSmaller.hs  Intervals.hs  KnownPointSet.hs  MonotonicFunction.hs  MonotonicInjection.hs  Phase.hs  PhaseSet.hs  PieceFunction.hs  PiecePartialFunction.hs  PieceSet.hs  PointCoPointSet.hs  PointFunction.hs  PointSet.hs  Set.hs  StepFunction.hs  ValueSet.hs
src/Data/TimePhase/: Atom.hs  Calendar.hs  Day.hs  Dict.hs  Eval.hs  Gregorian.hs  Item.hs  Read.hs  SExpression.hs  Time.hs  Value.hs
src/Data/TimePhase/Calendar/: Event.hs  Item.hs  Read.hs  Show.hs
src/Data/TimePhase/SExpression/: Read.hs
src/Language/: SExpression.hs
test/: .gitignore  Examples.hs  Golden.hs  Interval.hs  Item.hs  ItemTest.hs  Makefile  PhaseTest.hs  PointSet.hs  PointSetTest.hs  Sets.hs  Test.hs  TestPhaseSet.hs  TestSets.hs  dateformats.phases.10y.ref  duration.phases.ref  easter.phases  easter.phases.ref  from-until.phases  from-until.phases.ref  months.phases.ref  nth.phases  nth.phases.ref  of.phases  of.phases.ref  startend.phases.ref  test.phases  test.phases.ref  timeformats.phases  timeformats.phases.10y.ref  timeformats.phases.7d.ref  timeformats.phases.ref  to.phases  to.phases.ref
test/golden/: between.instant.phases  between.instant.recur  between.instant.recur.ref  between.period.phases.ref  between.period.recur  dateformats.recur  day.recur  day.recur.ref  duration.phases  duration.phases.ref  duration.recur  easter.recur  from-until.phases  from-until.phases.ref  from-until.recur  months.phases.ref  months.recur  now.recur  nth.phases  nth.recur  nth.recur.ref  of.phases  of.phases.ref  of.recur  of.recur.ref  startend.phases  startend.recur  test.phases  test.recur  test.recur.ref  timeformats.phases  timeformats.recur  timeformats.recur.ref  to.phases  to.phases.ref  to.recur  to.recur.ref
