cabal-version: >=1.10
name: Phases
version: 0.1
author: Ashley Yakeley
build-type: Simple
library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: KindSignatures TypeFamilies ScopedTypeVariables FlexibleInstances ImplicitParams TypeSynonymInstances
    build-depends: base
    exposed-modules: Set PointSet DeltaSmaller StepFunction Intervals

