cabal-version: >=1.10
name: Phases
version: 0.1
author: Ashley Yakeley
build-type: Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
    build-depends: base, time >= 1.4
    exposed-modules: 
        Data.SetSearch.Set 
        Data.SetSearch.PointSet 
        Data.SetSearch.DeltaSmaller
        Data.SetSearch.StepFunction 
        Data.SetSearch.Intervals
        Data.SetSearch.PointCoPointSet
        Data.SetSearch
        Language.SExpression
        Data.TimePhase
        Data.TimePhase.Read
        Data.TimePhase.Value
        Data.TimePhase.Dict
        Data.TimePhase.Eval
        Data.TimePhase.Item

executable time-phase
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
    build-depends: base, time >= 1.4, Phases == 0.1
    main-is: TimePhase.hs

executable phase-calendar
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
    build-depends: base, time >= 1.4, Phases == 0.1
    main-is: PhaseCalendar.hs

