cabal-version: >=1.10
name: recurrence
version: 0.1
author: Ashley Yakeley
build-type: Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
    build-depends: base, time >= 1.4
    exposed-modules:
        Data.SetSearch.Base
        Data.SetSearch.Set
        Data.SetSearch.MonotonicFunction
        Data.SetSearch.PointFunction
        Data.SetSearch.PointSet
        Data.SetSearch.KnownPointSet
        Data.SetSearch.DeltaSmaller
        Data.SetSearch.PieceFunction
        Data.SetSearch.PiecePartialFunction
        Data.SetSearch.PieceSet
        Data.SetSearch
        Data.SExpression.Read
        Data.SExpression
        Data.TimePhase
        Data.TimePhase.Time
        Data.TimePhase.Day
        Data.TimePhase.Gregorian
        Data.TimePhase.Read
        Data.TimePhase.Value
        Data.TimePhase.Atom
        Data.TimePhase.Dict
        Data.TimePhase.Eval
        Data.TimePhase.Calendar
    other-modules:
        Data.TimePhase.Calendar.Item
        Data.TimePhase.Calendar.Read
        Data.TimePhase.Calendar.Event
        Data.TimePhase.Calendar.Show
    ghc-options: -Wall -Werror

executable recur
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
    build-depends: base, time, recurrence
    main-is: PhaseCalendar.hs
    ghc-options: -Wall -Werror

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    build-depends:
        base,
        time,
        bytestring,
        utf8-string,
        countable,
        tasty,
        tasty-hunit,
        tasty-golden,
        recurrence
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
    ghc-options: -Wall -Werror
    main-is: Test.hs
    other-modules:
        Sets
        PointSet
        Item
        Golden
