cabal-version: >=1.10
name: recurrence
version: 0.1
author: Ashley Yakeley
build-type: Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
    build-depends:
        base,
        time
    exposed-modules:
        Data.SetSearch.Base
        Data.SetSearch.Set
        Data.SetSearch.MonotonicFunction
        Data.SetSearch.PointFunction
        Data.SetSearch.PointSet
        Data.SetSearch.KnownPointSet
        Data.SetSearch.DeltaSmaller
        Data.SetSearch.PieceFunction
        Data.SetSearch.PiecePartialFunction
        Data.SetSearch.PieceSet
        Data.SetSearch
        Data.SExpression.Read
        Data.SExpression
        Data.Recurrence
        Data.Recurrence.Time
        Data.Recurrence.Read
        Data.Recurrence.Value
        Data.Recurrence.Atom
        Data.Recurrence.Dict
        Data.Recurrence.Eval
        Data.Recurrence.Interval
        Data.Recurrence.Calendar
    other-modules:
        Data.Recurrence.Time.Day
        Data.Recurrence.Time.Gregorian
        Data.Recurrence.Time.Recurrence
        Data.Recurrence.Calendar.Item
        Data.Recurrence.Calendar.Read
        Data.Recurrence.Calendar.Event
        Data.Recurrence.Calendar.Show
    ghc-options: -Wall -Werror

executable recur
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
    build-depends: base, time, recurrence
    main-is: PhaseCalendar.hs
    ghc-options: -Wall -Werror

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    build-depends:
        base,
        time,
        bytestring,
        utf8-string,
        countable,
        tasty,
        tasty-hunit,
        tasty-golden,
        recurrence
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
    ghc-options: -Wall -Werror
    main-is: Test.hs
    other-modules:
        Sets
        PointSet
        Interval
        Golden
