cabal-version: >=1.10
name: recurrence
version: 0.1
author: Ashley Yakeley
build-type: Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
        PatternSynonyms
    build-depends:
        base,
        time
    exposed-modules:
        Data.SetSearch.Base
        Data.SetSearch.Set
        Data.SetSearch.MonotonicFunction
        Data.SetSearch.PointFunction
        Data.SetSearch.PointSet
        Data.SetSearch.DeltaSmaller
        Data.SetSearch.PieceFunction
        Data.SetSearch.PiecePartialFunction
        Data.SetSearch.PieceSet
        Data.SetSearch
        Data.SExpression
        Data.Recurrence
        Data.Recurrence.Time
        Data.Recurrence.SExpression
        Data.Recurrence.Interval
        Data.Recurrence.Calendar
    other-modules:
        Data.SExpression.Read
        Data.Recurrence.Time.Day
        Data.Recurrence.Time.Week
        Data.Recurrence.Time.Gregorian
        Data.Recurrence.Time.Recurrence
        Data.Recurrence.SExpression.Value
        Data.Recurrence.SExpression.Atom
        Data.Recurrence.SExpression.Dict
        Data.Recurrence.SExpression.Eval
        Data.Recurrence.Calendar.Item
        Data.Recurrence.Calendar.Read
        Data.Recurrence.Calendar.Event
        Data.Recurrence.Calendar.Show
    ghc-options: -Wall -Werror

executable recur
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
        PatternSynonyms
    build-depends: base, time, recurrence, optparse-applicative
    main-is: Recur.hs
    ghc-options: -Wall -Werror

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    build-depends:
        base,
        time,
        filepath,
        directory,
        bytestring,
        utf8-string,
        countable,
        tasty,
        tasty-hunit,
        tasty-golden,
        recurrence
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
        GeneralizedNewtypeDeriving
        PatternSynonyms
    ghc-options: -Wall -Werror
    main-is: Test.hs
    other-modules:
        Sets
        PointSet
        Interval
        Golden
        Examples
