cabal-version: >=1.10
name: time-phase
version: 0.1
author: Ashley Yakeley
build-type: Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
    build-depends: base, time >= 1.4
    exposed-modules: 
        Data.SetSearch.Set
        Data.SetSearch.ValueSet
        Data.SetSearch.PointSet
        Data.SetSearch.KnownPointSet
        Data.SetSearch.DeltaSmaller
        Data.SetSearch.StepFunction
        Data.SetSearch.Intervals
        Data.SetSearch.PointCoPointSet
        Data.SetSearch.Cut
        Data.SetSearch.Phase
        Data.SetSearch
        Data.TimePhase.SExpression.Read
        Data.TimePhase.SExpression
        Data.TimePhase
        Data.TimePhase.Time
        Data.TimePhase.Read
        Data.TimePhase.Value
        Data.TimePhase.Atom
        Data.TimePhase.Dict
        Data.TimePhase.Eval
        Data.TimePhase.Item

executable time-phase
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
    build-depends: base, time >= 1.4, time-phase == 0.1
    main-is: TimePhase.hs

executable phase-calendar
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
    build-depends: base, time >= 1.4, time-phase == 0.1
    main-is: PhaseCalendar.hs

