cabal-version: >=1.10
name: time-phase
version: 0.1
author: Ashley Yakeley
build-type: Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
        LambdaCase
        StandaloneDeriving
        ExistentialQuantification
        DefaultSignatures
    build-depends: base, time >= 1.4
    exposed-modules:
        Data.SetSearch.Base
        Data.SetSearch.Set
        Data.SetSearch.PointFunction
        Data.SetSearch.PointSet
        Data.SetSearch.KnownPointSet
        Data.SetSearch.DeltaSmaller
        Data.SetSearch.PieceFunction
        Data.SetSearch.PiecePartialFunction
        Data.SetSearch.PieceSet
        Data.SetSearch
        Data.SExpression.Read
        Data.SExpression
        Data.TimePhase
        Data.TimePhase.Time
        Data.TimePhase.Read
        Data.TimePhase.Value
        Data.TimePhase.Atom
        Data.TimePhase.Dict
        Data.TimePhase.Eval
        Data.TimePhase.Item
    ghc-options: -Wall -Werror

executable phase-calendar
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions:
        KindSignatures
        TypeFamilies
        ScopedTypeVariables
        FlexibleInstances
        ImplicitParams
        TypeSynonymInstances
        MultiParamTypeClasses
        FlexibleContexts
        RecordWildCards
    build-depends: base, time >= 1.4, time-phase == 0.1
    main-is: PhaseCalendar.hs
    ghc-options: -Wall -Werror
